Dumbsplain Guide Added fix for header overlay large spacing Addedd scrollable content to overlay

--- a/src/CSS/Overlay.css
+++ b/src/CSS/Overlay.css
@@ -295,6 +295,26 @@ p.streak{
     max-height: 600px;
     overflow-x: hidden;
   }
+
+  .infocontainer {
+    margin-top: 1.75em;
+    font-size: 1em;
+    line-height: .5em;
+  }
+
+  .level{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 0.45em;
+    margin: 5px 0;
+  }
+
+  .leveltext{
+    margin-bottom: 5px;
+    line-height: 15px;
+  }
+
+
 }
 
 /* for iPhone and Pixel devices */
@@ -305,6 +325,5 @@ p.streak{
     min-height: 600px;
     max-height: 600px;
   }
-
   
 }
